CO: all services public by default

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -5,10 +5,6 @@ parameters:
 
 services:
     _defaults:
-        # automatically injects dependencies in your services
-        autowire: true
-        # automatically registers your services as commands, event subscribers, etc.
-        autoconfigure: true
-        # this means you cannot fetch services directly from the container via $container->get()
-        # if you need to do this, you can override this setting on individual services
+        autowire: false
+        autoconfigure: false
         public: true
