--- a/composer.json
+++ b/composer.json
@@ -9,15 +9,15 @@
         "ext-zip": "*",
         "curl/curl": "1.2.1",
         "symfony/polyfill-apcu": "^1.0",
-        "symfony/symfony": "v3.4.0-BETA4",
+        "symfony/symfony": "v3.4.0-RC2",
         "symfony/swiftmailer-bundle": "^2.6.4",
         "symfony/monolog-bundle": "^3.1.0",
         "doctrine/cache": "^1.6",
         "doctrine/orm": "^2.5",
         "doctrine/doctrine-bundle": "^1.6",
-        "twig/twig": "^1.0||^2.0",
+        "twig/twig": "^1.0|^2.0",
         "sensio/distribution-bundle": "^5.0.19",
-        "sensio/framework-extra-bundle": "^5.0.0",
+        "sensio/framework-extra-bundle": "^3.0.2",
         "defuse/php-encryption": "~2.0.1",
         "geoip2/geoip2": "~2.4.2",
         "mrclay/minify": "~2.3.0",
@@ -40,7 +40,7 @@
         "composer/ca-bundle": "^1.0",
         "nikic/php-parser": "^2.1",
         "paragonie/random_compat": "^1.4|^2.0",
-        "prestashop/translationtools-bundle": "dev-master",
+        "prestashop/translationtools-bundle": "0.2",
         "prestashop/smarty": "dev-master",
         "prestashop/blockreassurance": "dev-master",
         "prestashop/contactform": "dev-master",
