--- a/src/PrestaShopBundle/Resources/config/admin/services-form.yml
+++ b/src/PrestaShopBundle/Resources/config/admin/services-form.yml
@@ -1,4 +1,7 @@
 services:
+    _defaults:
+        public: true
+
     form.type.date_picker:
         class: PrestaShopBundle\Form\Admin\Type\DatePickerType
         tags:
@@ -221,6 +224,7 @@ services:
     form.type.performance.caching:
         class: 'PrestaShopBundle\Form\Admin\AdvancedParameters\Performance\CachingType'
         parent: 'form.type.translatable.aware'
+        public: true
         tags:
             - { name: form.type }
 
