--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "ext-zip": "*",
         "curl/curl": "1.2.1",
         "symfony/polyfill-apcu": "^1.0",
-        "symfony/symfony": "v3.4.0-BETA4",
+        "symfony/symfony": "v3.4.0",
         "symfony/swiftmailer-bundle": "^2.6.4",
         "symfony/monolog-bundle": "^3.1.0",
         "doctrine/cache": "^1.6",
@@ -40,7 +40,7 @@
         "composer/ca-bundle": "^1.0",
         "nikic/php-parser": "^2.1",
         "paragonie/random_compat": "^1.4|^2.0",
-        "prestashop/translationtools-bundle": "dev-master",
+        "prestashop/translationtools-bundle": "0.2",
         "prestashop/smarty": "dev-master",
         "prestashop/blockreassurance": "dev-master",
         "prestashop/contactform": "dev-master",
