--- a/src/PrestaShopBundle/Resources/config/services.yml
+++ b/src/PrestaShopBundle/Resources/config/services.yml
@@ -305,7 +305,7 @@ services:
         class: PrestaShopBundle\Entity\Repository\LogRepository
         arguments:
             - '@doctrine.dbal.default_connection'
-            - '%database_prefix%log'
+            - '%database_prefix%'
     # Api
     prestashop.core.api.query_params_collection:
         abstract: true
