CO: Used official Smarty library

--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "doctrine/orm": "~2.5.3",
         "doctrine/doctrine-bundle": "^1.8.0",
         "twig/twig": "^1.0||^2.0",
+        "smarty/smarty": "^3.1.31",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^5.0.0",
         "defuse/php-encryption": "~2.0.1",
@@ -43,7 +44,6 @@
         "nikic/php-parser": "^2.1",
         "paragonie/random_compat": "^1.4|^2.0",
         "prestashop/translationtools-bundle": "2.x-dev",
-        "prestashop/smarty": "dev-master",
         "prestashop/blockreassurance": "dev-master",
         "prestashop/contactform": "dev-master",
         "prestashop/dashactivity": "dev-master",
