--- a/tools/docker/docker-compose-tests.yml
+++ b/tools/docker/docker-compose-tests.yml
@@ -9,7 +9,7 @@ services:
         ports:
             - "8080:80"
         volumes:
-            - ./..:/var/www/html
+            - ./../..:/var/www/html
             - ./data/tests:/tmp/prestashop
         environment:
           - WEB_DOCUMENT_ROOT=/var/www/html
