Enable tiny mce on maintenance page

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -58,6 +58,7 @@ twig:
         webpack_server:   false
     paths:
         '%admin_page%/Configure/AdvancedParameters': AdvancedParameters
+        '%admin_page%/Configure/ShopParameters': ShopParameters
 
 # Doctrine Configuration
 doctrine:
