--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -58,6 +58,7 @@ twig:
         '%admin_page%/Product': Product
         '%admin_page%/TwigTemplateForm': Twig
         '%admin_page%/Configure/AdvancedParameters': AdvancedParameters
+        '%admin_page%/Configure/ShopParameters': ShopParameters
     globals:
         webpack_server:   false
 
