--- a/src/PrestaShopBundle/Resources/config/admin/services-form.yml
+++ b/src/PrestaShopBundle/Resources/config/admin/services-form.yml
@@ -242,6 +242,12 @@ services:
         tags:
             - { name: form.type }
 
+    form.type.product_preferences.general:
+      class: 'PrestaShopBundle\Form\Admin\ShopParameters\ProductPreferences\GeneralType'
+      parent: 'form.type.translatable.aware'
+      tags:
+          - { name: form.type }
+
 # Form extension
     form.type.extension.textarea:
         class: 'PrestaShopBundle\Form\Admin\Type\TextareaEmptyType'
