--- a/src/PrestaShopBundle/Resources/config/admin/routing_shop_parameters.yml
+++ b/src/PrestaShopBundle/Resources/config/admin/routing_shop_parameters.yml
@@ -1,7 +1,14 @@
-# Product Settings
-admin_product_settings:
+# Product Preferences
+admin_product_preferences:
     path: /product_preferences
     methods: [GET]
     defaults:
         _controller: 'PrestaShopBundle:Admin\Configure\ShopParameters\ProductPreferences:index'
+        _legacy_controller: AdminPPreferences
+
+admin_product_preferences_process:
+    path: /product_preferences
+    methods: [POST]
+    defaults:
+        _controller: 'PrestaShopBundle:Admin\Configure\ShopParameters\ProductPreferences:process'
         _legacy_controller: AdminPPreferences
