Adapt docker files for new content (Still WIP with the download folder)

--- a/tests/E2E/Dockerfile
+++ b/tests/E2E/Dockerfile
@@ -1,5 +1,7 @@
 FROM node:8
 
+RUN apt update && apt install -qq pdftk poppler-utils && rm -rf /var/lib/apt/lists/*
+
 WORKDIR /tmp/
 
 COPY package.json /tmp/
