--- a/src/PrestaShopBundle/Resources/config/adapter/services.yml
+++ b/src/PrestaShopBundle/Resources/config/adapter/services.yml
@@ -132,3 +132,9 @@ services:
     prestashop.adapter.php_parameters:
         class: 'PrestaShop\PrestaShop\Adapter\Configuration\PhpParameters'
         arguments: ['%kernel.root_dir%/config/parameters.php']
+
+    prestashop.adapter.filter_categories.request_purifier:
+        class: 'PrestaShop\PrestaShop\Adapter\Product\FilterCategoriesRequestPurifier'
+
+    prestashop.adapter.filter_parameters_updater:
+        class: 'PrestaShop\PrestaShop\Adapter\Product\FilterParametersUpdater'
