--- a/src/PrestaShopBundle/Resources/config/admin/services-form.yml
+++ b/src/PrestaShopBundle/Resources/config/admin/services-form.yml
@@ -184,6 +184,15 @@ services:
         tags:
             - { name: form.type }
 
+    form.type.product.categories:
+        class: PrestaShopBundle\Form\Admin\Product\ProductCategories
+        arguments:
+            - "@translator"
+            - "@prestashop.adapter.data_provider.category"
+            - "@=service('prestashop.adapter.legacy.context').getContext().language.id"
+        tags:
+            - { name: form.type }
+
     form.type.translatable.aware:
         abstract: true
         arguments: ['@translator']
