--- a/src/PrestaShopBundle/Resources/config/admin/services.yml
+++ b/src/PrestaShopBundle/Resources/config/admin/services.yml
@@ -44,6 +44,7 @@ services:
         arguments:
             - "@doctrine.orm.entity_manager"
             - "@prestashop.adapter.image_manager"
+            - "@cache.app"
         public: false
     prestashop.adapter.admin.data_updater.product:
         class: PrestaShop\PrestaShop\Adapter\Product\AdminProductDataUpdater
