--- a/src/PrestaShopBundle/Resources/config/admin/services.yml
+++ b/src/PrestaShopBundle/Resources/config/admin/services.yml
@@ -44,7 +44,7 @@ services:
         arguments:
             - "@doctrine.orm.entity_manager"
             - "@prestashop.adapter.image_manager"
-            - "@cache.app"
+            - "@prestashop.static_cache.adapter"
         public: false
     prestashop.adapter.admin.data_updater.product:
         class: PrestaShop\PrestaShop\Adapter\Product\AdminProductDataUpdater
@@ -157,7 +157,7 @@ services:
         class: PrestaShopBundle\Security\Admin\EmployeeProvider
         arguments:
             - "@prestashop.adapter.legacy.context"
-            - "@cache.app"
+            - "@prestashop.static_cache.adapter"
 
     prestashop.user_locale.listener:
         class: PrestaShopBundle\EventListener\UserLocaleListener
@@ -305,3 +305,11 @@ services:
         tags:
           - { name: twig.loader, priority: 1}
 
+    # Cache adapter
+    prestashop.static_cache.adapter:
+        class: Symfony\Component\Cache\Adapter\ArrayAdapter
+        tags:
+          - { name: monolog.logger, channel: cache }
+          - { name: cache.pool, clearer: cache.default_clearer }
+        calls:
+          - ['setLogger', ['@logger']]
