--- a/src/PrestaShopBundle/Resources/config/services.yml
+++ b/src/PrestaShopBundle/Resources/config/services.yml
@@ -529,3 +529,4 @@ services:
             - '@prestashop.adapter.product_general.configruation'
             - '@prestashop.adapter.product_pagination.configuration'
             - '@prestashop.adapter.product_page.configuration'
+            - '@prestashop.adapter.product_stock.configuration'
