--- a/src/PrestaShopBundle/Resources/config/admin/services-form.yml
+++ b/src/PrestaShopBundle/Resources/config/admin/services-form.yml
@@ -186,7 +186,7 @@ services:
 
     form.type.translatable.aware:
         abstract: true
-        arguments: 
+        arguments:
             - "@translator"
             - "@=service('prestashop.adapter.legacy.context').getLanguages()"
 
@@ -252,6 +252,12 @@ services:
 
     form.type.product_preferences.general:
       class: 'PrestaShopBundle\Form\Admin\ShopParameters\ProductPreferences\GeneralType'
+      parent: 'form.type.translatable.aware'
+      tags:
+          - { name: form.type }
+
+    form.type.product_preferences.stock:
+      class: 'PrestaShopBundle\Form\Admin\ShopParameters\ProductPreferences\StockType'
       parent: 'form.type.translatable.aware'
       tags:
           - { name: form.type }
