--- a/tests/E2E/docker-compose.yml
+++ b/tests/E2E/docker-compose.yml
@@ -11,8 +11,8 @@ services:
     depends_on:
       - "prestashop"
 #      - "selenium-chrome"
-#    command: ["/tmp/wait-for-it.sh", "--timeout=200", "--strict", "prestashop:80", "--", "/tmp/node_modules/mocha/bin/mocha /tmp/test/campaigns/high/*", "--URL=prestashop-web", "--SELENIUM=selenium-chrome", "--DIR=/home/seluser/Downloads/"]
-    command: ["/tmp/wait-for-it.sh", "--timeout=300", "--strict", "prestashop:80", "--", "/tmp/node_modules/mocha/bin/mocha /tmp/test/campaigns/regular/*", "--URL=localhost:8002", "--SELENIUM=192.168.0.1", "--DIR=/home/seluser/Downloads/"]
+#    command: ["/tmp/wait-for-it.sh", "--timeout=200", "--strict", "prestashop:80", "--", "/tmp/node_modules/mocha/bin/mocha /tmp/test/campaigns/high/*", "--URL=prestashop-web", "--DIR=/home/seluser/Downloads/"]
+    command: ["/tmp/wait-for-it.sh", "--timeout=300", "--strict", "prestashop:80", "--", "/tmp/node_modules/mocha/bin/mocha /tmp/test/campaigns/regular/*", "--URL=localhost:8002", "--DIR=/home/seluser/Downloads/"]
     volumes:
       - ./screenshots/:/home/test/screenshots/
 #      - downloads:/home/seluser/Downloads
