--- a/tests/E2E/docker-compose.yml
+++ b/tests/E2E/docker-compose.yml
@@ -4,18 +4,15 @@ services:
   tests:
     build: .
     environment:
-#      SELENIUM_HOST: selenium-chrome
-#      URL: prestashop-web
-      SELENIUM_HOST: 192.168.0.1
-      URL: localhost:8002
+      SELENIUM_HOST: selenium-chrome
+      URL: prestashop-web
     depends_on:
       - "prestashop"
-#      - "selenium-chrome"
-#    command: ["/tmp/wait-for-it.sh", "--timeout=200", "--strict", "prestashop:80", "--", "/tmp/node_modules/mocha/bin/mocha /tmp/test/campaigns/high/*", "--URL=prestashop-web", "--DIR=/home/seluser/Downloads/"]
-    command: ["/tmp/wait-for-it.sh", "--timeout=300", "--strict", "prestashop:80", "--", "/tmp/node_modules/mocha/bin/mocha /tmp/test/campaigns/regular/*", "--URL=localhost:8002", "--DIR=/home/seluser/Downloads/"]
+      - "selenium-chrome"
+    command: ["/tmp/wait-for-it.sh", "--timeout=200", "--strict", "prestashop:80", "--", "/tmp/node_modules/mocha/bin/mocha /tmp/test/campaigns/regular/*", "--URL=prestashop-web", "--DIR=/home/seluser/Downloads/"]
     volumes:
       - ./screenshots/:/home/test/screenshots/
-#      - downloads:/home/seluser/Downloads
+      - downloads:/home/seluser/Downloads
       - /home/thomas/Téléchargements:/home/seluser/Downloads
     networks:
       - default
@@ -28,8 +25,7 @@ services:
       PS_INSTALL_AUTO: 1
       PS_COUNTRY: fr
       PS_DEV_MODE: 1
-#      PS_DOMAIN: prestashop-web
-      PS_DOMAIN: localhost:8002
+      PS_DOMAIN: prestashop-web
       PS_FOLDER_ADMIN: admin-dev
       PS_FOLDER_INSTALL: install-dev
     depends_on:
@@ -46,16 +42,16 @@ services:
           aliases:
               - prestashop-web
 
-#  selenium-chrome:
-#    image: selenium/standalone-chrome
-#    ports:
-#      - 4444:4444
-#    volumes:
-#        - downloads:/home/seluser/Downloads
-#    networks:
-#      default:
-#          aliases:
-#              - selenium-chrome
+  selenium-chrome:
+    image: selenium/standalone-chrome
+    ports:
+      - 4444:4444
+    volumes:
+        - downloads:/home/seluser/Downloads
+    networks:
+      default:
+          aliases:
+              - selenium-chrome
 
   db:
     image: mysql
@@ -67,18 +63,7 @@ services:
 volumes:
     ps_var:
     ps_config:
-#    downloads:
+    downloads:
 
 networks:
   default:
-  dockernet:
-    driver: bridge
-    driver_opts:
-        subnet: 192.168.0.0/24
-        gateway: 192.168.0.1
-#    enable_ipv6: false
-    ipam:
-      driver: default
-      config:
-      -
-        subnet: 192.168.0.0/24
