--- a/src/PrestaShopBundle/Resources/config/services.yml
+++ b/src/PrestaShopBundle/Resources/config/services.yml
@@ -533,3 +533,30 @@ services:
           - ["setKernel", ["@kernel"]]
         tags:
           - {name: data_collector, template: "@PrestaShop/Admin/WebProfiler/config.html.twig", id: "config", priority: "-255"}
+
+
+    # Localization
+    prestashop.core.localization.locale.repository:
+        class: PrestaShop\PrestaShop\Core\Localization\Locale\Repository
+        arguments:
+            - '@prestashop.core.localization.cldr.localeRepository'
+            - '@prestashop.core.localization.currency.repository'
+        public: true
+
+    prestashop.core.localization.currency.repository:
+        class: PrestaShop\PrestaShop\Core\Localization\Currency\Repository
+        arguments:
+            - '@prestashop.core.localization.currency.datasource'
+        public: true
+
+    prestashop.core.localization.cldr.localeRepository:
+        class: PrestaShop\PrestaShop\Core\Localization\CLDR\LocaleRepository
+        arguments:
+            - 'todo'
+        public: true
+
+    prestashop.core.localization.currency.datasource:
+        class: PrestaShop\PrestaShop\Core\Localization\Currency\CurrencyDataSource
+        arguments:
+            - 'todo'
+        public: true
