start working on import migration

--- a/src/PrestaShopBundle/Resources/config/admin/services-form.yml
+++ b/src/PrestaShopBundle/Resources/config/admin/services-form.yml
@@ -258,6 +258,13 @@ services:
         tags:
             - { name: form.type }
 
+    form.type.import.import:
+        class: 'PrestaShopBundle\Form\Admin\AdvancedParameters\Import\ImportType'
+        parent: 'form.type.translatable.aware'
+        public: true
+        tags:
+            - { name: form.type }
+
 # Form extension
     form.type.extension.textarea:
         class: 'PrestaShopBundle\Form\Admin\Type\TextareaEmptyType'
