--- a/src/PrestaShopBundle/Resources/config/services/form/form_type.yml
+++ b/src/PrestaShopBundle/Resources/config/services/form/form_type.yml
@@ -257,3 +257,10 @@ services:
         public: true
         tags:
             - { name: form.type }
+
+    form.type.import.import:
+        class: 'PrestaShopBundle\Form\Admin\AdvancedParameters\Import\ImportType'
+        parent: 'form.type.translatable.aware'
+        public: true
+        tags:
+            - { name: form.type }
