--- a/src/PrestaShopBundle/Resources/config/services.yml
+++ b/src/PrestaShopBundle/Resources/config/services.yml
@@ -543,7 +543,7 @@ services:
     prestashop.core.localization.cldr.cache.adapter:
         class: Symfony\Component\Cache\Adapter\FilesystemAdapter
         arguments:
-            - 'prestashop_cldr_'
+            - 'CLDR'
             - 0
             - '%kernel.cache_dir%/localization'
         public: true
@@ -553,6 +553,7 @@ services:
         arguments:
             - '@prestashop.core.localization.cldr.localeRepository'
             - '@prestashop.core.localization.currency.repository'
+            - "@=service('translator').getLocale()"
         public: true
 
     prestashop.core.localization.currency.repository:
@@ -597,6 +598,7 @@ services:
         class: PrestaShop\PrestaShop\Core\Localization\Currency\CurrencyDataSource
         arguments:
             - '@prestashop.core.localization.currency.middleware.topLayer'
+            - '@prestashop.core.localization.currency.middleware.installed'
         public: true
 
     prestashop.core.localization.currency.middleware.topLayer: '@prestashop.core.localization.currency.middleware.cache'
@@ -623,4 +625,10 @@ services:
         arguments:
             - '@prestashop.core.localization.cldr.localeRepository'
             - "@=service('translator').getLocale()"
+        public: true
+
+    prestashop.core.localization.currency.middleware.installed:
+        class: PrestaShop\PrestaShop\Core\Localization\Currency\DataLayer\CurrencyInstalled
+        arguments:
+            - '@prestashop.adapter.data_provider.currency'
         public: true
