Add stock movement histories to product page v2

--- a/src/PrestaShopBundle/Resources/config/services/bundle/form/form_type.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/form/form_type.yml
@@ -1511,12 +1511,10 @@ services:
     tags:
       - { name: form.type }
 
-  form.type.sell.product.stock.stock_movement:
-    class: 'PrestaShopBundle\Form\Admin\Sell\Product\Stock\StockMovementType'
+  form.type.sell.product.stock.stock_movement_history:
+    class: 'PrestaShopBundle\Form\Admin\Sell\Product\Stock\StockMovementHistoryType'
     parent: 'form.type.translatable.aware'
     public: true
-    arguments:
-      - '@form.form_cloner'
     tags:
       - { name: form.type }
 
