--- a/src/PrestaShopBundle/Resources/config/services/adapter/product/_stock.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/product/_stock.yml
@@ -39,14 +39,23 @@ services:
       - name: tactician.handler
         command: PrestaShop\PrestaShop\Core\Domain\Product\Stock\Command\UpdateProductStockInformationCommand
 
-  prestashop.adapter.product.stock.query_handler.get_product_stock_movement_handler:
-    class: PrestaShop\PrestaShop\Adapter\Product\Stock\QueryHandler\GetEmployeesStockMovementsHandler
+  prestashop.adapter.product.stock.query_handler.get_product_stock_movement_history_handler:
+    class: PrestaShop\PrestaShop\Adapter\Product\Stock\QueryHandler\GetProductStockMovementHistoryHandler
     arguments:
       - '@prestashop.adapter.product.stock.repository.stock_available_multi_shop_repository'
       - '@prestashop.adapter.product.stock.repository.stock_movement_repository'
     tags:
       - name: tactician.handler
-        command: PrestaShop\PrestaShop\Core\Domain\Product\Stock\Query\GetEmployeesStockMovements
+        command: PrestaShop\PrestaShop\Core\Domain\Product\Stock\Query\GetProductStockMovementHistory
+
+  prestashop.adapter.product.stock.query_handler.get_combination_stock_movement_history_handler:
+    class: PrestaShop\PrestaShop\Adapter\Product\Stock\QueryHandler\GetCombinationStockMovementHistoryHandler
+    arguments:
+      - '@prestashop.adapter.product.stock.repository.stock_available_multi_shop_repository'
+      - '@prestashop.adapter.product.stock.repository.stock_movement_repository'
+    tags:
+      - name: tactician.handler
+        command: PrestaShop\PrestaShop\Core\Domain\Product\Stock\Query\GetCombinationStockMovementHistory
 
   prestashop.adapter.product.stock.update.product_stock_updater:
     class: PrestaShop\PrestaShop\Adapter\Product\Stock\Update\ProductStockUpdater
