Creation link contzains the shopId when in single shop mode, the creation can be done even in All shops mode it redirects to the correct shop on successful creation

--- a/src/PrestaShopBundle/Resources/config/services/bundle/form/form_type.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/form/form_type.yml
@@ -1775,6 +1775,7 @@ services:
       - '@prestashop.adapter.shop.url.product_provider'
       - '@prestashop.adapter.shop.url.product_preview_provider'
       - '@router'
+      - "@=service('prestashop.adapter.shop.context').getContextShopID()"
     tags:
       - { name: form.type }
 
