Add command DeleteProductFromShopsCommand

--- a/src/PrestaShopBundle/Resources/config/services/adapter/product.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/product.yml
@@ -482,6 +482,14 @@ services:
       - name: tactician.handler
         command: PrestaShop\PrestaShop\Core\Domain\Product\Shop\Command\CopyProductToShop
 
+  prestashop.adapter.product.shop.command_handler.delete_product_from_shops_handler:
+    class: PrestaShop\PrestaShop\Adapter\Product\Shop\CommandHandler\DeleteProductFromShopsHandler
+    arguments:
+      - '@prestashop.adapter.product.update.product_shop_updater'
+    tags:
+      - name: tactician.handler
+        command: PrestaShop\PrestaShop\Core\Domain\Product\Shop\Command\DeleteProductFromShopsCommand
+
   prestashop.adapter.product.product_duplicator:
     class: PrestaShop\PrestaShop\Adapter\Product\ProductDuplicator
     arguments:
