Handle multiple selection of shops

--- a/src/PrestaShopBundle/Resources/config/services/bundle/form/form_type.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/form/form_type.yml
@@ -832,6 +832,7 @@ services:
     arguments:
       - '@prestashop.core.admin.shop.repository'
       - "@=service('prestashop.core.admin.shop_group.repository').findActive()"
+      - "@=service('prestashop.adapter.shop.context').getContextShopID()"
     tags:
       - { name: form.type }
 
