--- a/src/PrestaShopBundle/Resources/config/services/core/form/form_builder.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/form/form_builder.yml
@@ -201,6 +201,13 @@ services:
       - '@prestashop.core.form.identifiable_object.data_provider.product_form_data_provider'
       - '@prestashop.core.form.identifiable_object.option_provider.product_form_options_provider'
 
+  prestashop.core.form.identifiable_object.builder.product_shops_form_builder:
+    class: 'PrestaShop\PrestaShop\Core\Form\IdentifiableObject\Builder\FormBuilder'
+    factory: [ '@prestashop.core.form.builder.form_builder_factory', 'create' ]
+    arguments:
+      - 'PrestaShopBundle\Form\Admin\Sell\Product\ProductShopsType'
+      - '@prestashop.core.form.identifiable_object.data_provider.product_shops_form_data_provider'
+
   prestashop.core.form.identifiable_object.builder.combination_form_builder:
     class: 'PrestaShop\PrestaShop\Core\Form\IdentifiableObject\Builder\FormBuilder'
     factory: [ '@prestashop.core.form.builder.form_builder_factory', 'create' ]
