--- a/src/PrestaShopBundle/Resources/config/services/core/form/form_data_provider.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/form/form_data_provider.yml
@@ -159,6 +159,12 @@ services:
       - '@=service("prestashop.adapter.legacy.configuration").getInt("PS_SHOP_DEFAULT")'
       - "@=service('prestashop.adapter.shop.context').getContextShopID()"
 
+  prestashop.core.form.identifiable_object.data_provider.product_shops_form_data_provider:
+    class: 'PrestaShop\PrestaShop\Core\Form\IdentifiableObject\DataProvider\ProductShopsFormDataProvider'
+    arguments:
+      - '@prestashop.adapter.product.repository.product_multi_shop_repository'
+      - "@=service('prestashop.adapter.shop.context').getContextShopID()"
+
   prestashop.core.form.identifiable_object.data_provider.combination_form_data_provider:
     class: 'PrestaShop\PrestaShop\Core\Form\IdentifiableObject\DataProvider\CombinationFormDataProvider'
     arguments:
