--- a/src/PrestaShopBundle/Resources/config/services/core/form/form_handler.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/form/form_handler.yml
@@ -202,6 +202,12 @@ services:
     arguments:
       - '@prestashop.core.form.identifiable_object.data_handler.product_form_data_handler'
 
+  prestashop.core.form.identifiable_object.product_shops_form_handler:
+    class: 'PrestaShop\PrestaShop\Core\Form\IdentifiableObject\Handler\FormHandler'
+    factory: [ '@prestashop.core.form.identifiable_object.handler.form_handler_factory', 'create' ]
+    arguments:
+      - '@prestashop.core.form.identifiable_object.data_handler.product_shops_form_data_handler'
+
   prestashop.core.form.identifiable_object.combination_form_handler:
     class: 'PrestaShop\PrestaShop\Core\Form\IdentifiableObject\Handler\FormHandler'
     factory: [ '@prestashop.core.form.identifiable_object.handler.form_handler_factory', 'create' ]
