--- a/src/PrestaShopBundle/Resources/config/services/adapter/product/_combination.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/product/_combination.yml
@@ -110,6 +110,7 @@ services:
     arguments:
       - '@prestashop.core.product.combination.generator.combination_generator'
       - '@prestashop.adapter.product.combination.repository.combination_repository'
+      - '@prestashop.adapter.product.combination.repository.combination_multi_shop_repository'
       - '@prestashop.adapter.product.repository.product_repository'
 
   prestashop.adapter.product.combination.update.default_combination_updater:
