--- a/src/PrestaShopBundle/Resources/config/services/bundle/form/form_type.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/form/form_type.yml
@@ -362,7 +362,7 @@ services:
       - '@prestashop.adapter.legacy.configuration'
       - '@=service("prestashop.adapter.multistore_feature").isUsed()'
       - '@=service("prestashop.adapter.shop.context").isShopContext()'
-      - '@=service("prestashop.adapter.shop.context").isAllContext()'
+      - '@=service("prestashop.adapter.shop.context").isAllShopContext()'
     public: true
     calls:
       - [ 'setIsSecure', [ "@=service('request_stack').getCurrentRequest().isSecure()" ] ]
