Changed button to lead to lsit
# Conflicts:
#	src/PrestaShopBundle/Resources/views/Admin/TwigTemplateForm/prestashop_ui_kit_base.html.twig

--- a/src/PrestaShopBundle/Resources/config/services/bundle/form/form_type.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/form/form_type.yml
@@ -1629,6 +1629,8 @@ services:
   form.type.sell.product.pricing.catalog_price_rules_type:
     class: 'PrestaShopBundle\Form\Admin\Sell\Product\Pricing\CatalogPriceRulesType'
     parent: 'form.type.translatable.aware'
+    arguments:
+      - '@prestashop.router'
     public: true
     tags:
       - { name: form.type }
