--- a/src/PrestaShopBundle/Resources/config/routing/admin/sell/customer_service/merchandise_return.yml
+++ b/src/PrestaShopBundle/Resources/config/routing/admin/sell/customer_service/merchandise_return.yml
@@ -23,3 +23,27 @@ admin_merchandise_returns_filter:
     redirectRoute: admin_merchandise_returns_index
     _legacy_controller: AdminReturn
 #  _legacy_link: AdminReturn:submitFilterorder_return
+
+admin_order_returns_edit:
+  path: /{orderReturnId}/edit
+  methods: [GET]
+  defaults:
+    _controller: PrestaShopBundle:Admin/Sell/CustomerService/MerchandiseReturn:edit
+    _legacy_controller: AdminReturn
+    #    _legacy_link: AdminReturn:updateorder_return
+    #    _legacy_parameters:
+    #      id_order_return: orderReturnId
+    requirements:
+      orderReturnId: \d+
+
+admin_order_returns_update:
+  path: /{orderReturnId}/update
+  methods: [POST]
+  defaults:
+    _controller: PrestaShopBundle:Admin/Sell/CustomerService/MerchandiseReturn:edit
+    _legacy_controller: AdminReturn
+    #    _legacy_link: AdminReturn:updateorder_return
+    #    _legacy_parameters:
+    #      id_order_return: orderReturnId
+  requirements:
+    orderReturnId: \d+
