--- a/src/PrestaShopBundle/Resources/config/services/core/form/form_data_provider.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/form/form_data_provider.yml
@@ -118,6 +118,11 @@ services:
     arguments:
       - '@prestashop.core.query_bus'
 
+  prestashop.core.form.identifiable_object.data_provider.order_return_form_data_provider:
+    class: 'PrestaShop\PrestaShop\Core\Form\IdentifiableObject\DataProvider\OrderReturnFormDataProvider'
+    arguments:
+      - '@prestashop.core.query_bus'
+
   prestashop.core.form.identifiable_object.data_provider.catalog_price_rule_form_data_provider:
     class: 'PrestaShop\PrestaShop\Core\Form\IdentifiableObject\DataProvider\CatalogPriceRuleFormDataProvider'
     arguments:
