--- a/src/PrestaShopBundle/Resources/config/services/core/form/form_handler.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/form/form_handler.yml
@@ -124,6 +124,12 @@ services:
     arguments:
       - '@prestashop.core.form.identifiable_object.data_handler.order_message_form_data_handler'
 
+  prestashop.core.form.identifiable_object.handler.order_return_form_handler:
+    class: 'PrestaShop\PrestaShop\Core\Form\IdentifiableObject\Handler\FormHandler'
+    factory: 'prestashop.core.form.identifiable_object.handler.form_handler_factory:create'
+    arguments:
+      - '@prestashop.core.form.identifiable_object.data_handler.order_return_form_data_handler'
+
   prestashop.core.form.identifiable_object.handler.catalog_price_rule_form_handler:
     class: 'PrestaShop\PrestaShop\Core\Form\IdentifiableObject\Handler\FormHandler'
     factory: [ '@prestashop.core.form.identifiable_object.handler.form_handler_factory', 'create' ]
