--- a/tests/Integration/Behaviour/behat.yml
+++ b/tests/Integration/Behaviour/behat.yml
@@ -174,6 +174,7 @@ default:
             - Tests\Integration\Behaviour\Features\Context\CommonFeatureContext
             - Tests\Integration\Behaviour\Features\Context\ShopFeatureContext
             - Tests\Integration\Behaviour\Features\Context\Domain\OrderStateFeatureContext
+            - Tests\Integration\Behaviour\Features\Context\Domain\CommonDomainFeatureContext
         currency:
             paths:
                 - "%paths.base%/Features/Scenario/Currency"
