--- a/src/PrestaShopBundle/Resources/config/services/adapter/order.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/order.yml
@@ -283,3 +283,6 @@ services:
     tags:
       - name: tactician.handler
         command: PrestaShop\PrestaShop\Core\Domain\Order\Command\SetInternalOrderNoteCommand
+
+  prestashop.core.domain.order.repository.order_repository:
+    class: PrestaShop\PrestaShop\Core\Domain\Order\Repository\OrderRepository
