--- a/src/PrestaShopBundle/Resources/config/services/adapter/order_return.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/order_return.yml
@@ -2,7 +2,6 @@ services:
     _defaults:
         public: true
 
-    # Command handlers
     prestashop.adapter.order_return.query_handler.get_order_return_for_editing:
         class: 'PrestaShop\PrestaShop\Adapter\OrderReturn\QueryHandler\GetOrderReturnForEditingHandler'
         tags:
@@ -10,6 +9,8 @@ services:
               command: 'PrestaShop\PrestaShop\Core\Domain\OrderReturn\Query\GetOrderReturnForEditing'
         arguments:
            - '@prestashop.adapter.order_return.repository.order_return_repository'
+           - '@prestashop.core.domain.customer.repository.customer_repository'
+           - '@prestashop.core.domain.order.repository.order_repository'
 
     prestashop.adapter.order_return.command_handler.edit_order_return_handler:
         class: 'PrestaShop\PrestaShop\Adapter\OrderReturn\CommandHandler\UpdateOrderReturnStateHandler'
@@ -22,10 +23,12 @@ services:
           - '@prestashop.adapter.order_return.validator.order_return_validator'
 
     prestashop.adapter.order_return.repository.order_return_repository:
-        class: PrestaShop\PrestaShop\Adapter\OrderReturn\Repository\OrderReturnRepository
+        class: 'PrestaShop\PrestaShop\Adapter\OrderReturn\Repository\OrderReturnRepository'
+        arguments:
+          - '@prestashop.adapter.order_return.validator.order_return_validator'
 
     prestashop.adapter.order_return.repository.order_return_state_repository:
-        class: PrestaShop\PrestaShop\Adapter\OrderReturn\Repository\OrderReturnStateRepository
+        class: 'PrestaShop\PrestaShop\Adapter\OrderReturn\Repository\OrderReturnStateRepository'
 
     prestashop.adapter.order_return.validator.order_return_validator:
-        class: PrestaShop\PrestaShop\Adapter\OrderReturn\Validator\OrderReturnValidator
+        class: 'PrestaShop\PrestaShop\Adapter\OrderReturn\Validator\OrderReturnValidator'
