--- a/src/PrestaShopBundle/Resources/config/routing/admin/sell/customer_service/merchandise_return.yml
+++ b/src/PrestaShopBundle/Resources/config/routing/admin/sell/customer_service/merchandise_return.yml
@@ -25,11 +25,11 @@ admin_merchandise_returns_filter:
 #  _legacy_link: AdminReturn:submitFilterorder_return
 
 admin_order_returns_edit:
-  path: /{orderReturnId}/edit
-  methods: [GET]
-  defaults:
-    _controller: PrestaShopBundle:Admin/Sell/CustomerService/MerchandiseReturn:edit
-    _legacy_controller: AdminReturn
+    path: /{orderReturnId}/edit
+    methods: [GET]
+    defaults:
+        _controller: PrestaShopBundle\Controller\Admin\Sell\CustomerService\MerchandiseReturnController::editAction
+        _legacy_controller: AdminReturn
     #    _legacy_link: AdminReturn:updateorder_return
     #    _legacy_parameters:
     #      id_order_return: orderReturnId
