Removed some uneeded things like sprintf or DataProvider
# Conflicts:
#	src/PrestaShopBundle/Resources/config/routing/admin/sell/customer_service/merchandise_return.yml

--- a/src/PrestaShopBundle/Resources/config/routing/admin/sell/customer_service/merchandise_return.yml
+++ b/src/PrestaShopBundle/Resources/config/routing/admin/sell/customer_service/merchandise_return.yml
@@ -26,7 +26,7 @@ admin_merchandise_returns_filter:
 
 admin_order_returns_edit:
     path: /{orderReturnId}/edit
-    methods: [GET]
+    methods: [GET, POST]
     defaults:
         _controller: PrestaShopBundle\Controller\Admin\Sell\CustomerService\MerchandiseReturnController::editAction
         _legacy_controller: AdminReturn
