--- a/src/PrestaShopBundle/Resources/config/services/core/constraint_validator.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/constraint_validator.yml
@@ -64,6 +64,13 @@ services:
     tags:
       - { name: validator.constraint_validator }
 
+  prestashop.core.constraint_validator.address_format_validator:
+    class: 'PrestaShop\PrestaShop\Core\ConstraintValidator\AddressFormatValidator'
+    arguments:
+      - '@prestashop.core.query_bus'
+    tags:
+      - { name: validator.constraint_validator }
+
   prestashop.validator.constraint.unique_state_iso_code:
     class: 'PrestaShop\PrestaShop\Core\ConstraintValidator\UniqueStateIsoCodeValidator'
     tags:
