Changed the way url is passed

--- a/src/PrestaShopBundle/Resources/config/services/bundle/form/form_type.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/form/form_type.yml
@@ -1583,6 +1583,7 @@ services:
     public: true
     arguments:
       - '@=service("prestashop.adapter.data_provider.currency").getDefaultCurrency()'
+      - '@prestashop.adapter.legacy.context'
     tags:
       - { name: form.type }
 
